--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
           echo '//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}' > .npmrc
-          npm publish
+          npm publish --access public
         env:
           NPM_AUTH_TOKEN: ${{ secrets.MXFRIEND_NPM_PUBLISH }}
