--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./udp": {
+      "node": "./dist/udpPort.js"
+    }
+  },
   "files": [
     "dist"
   ],
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.2",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.27",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3"
+    "@tsconfig/node16": "^1.0.3",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^16.18.11",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.4"
   }
 }
