--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "ES2020",
     "moduleResolution": "node",
     "types": ["node", "jest"],
+    "lib": ["DOM"],
     "declaration": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
