--- a/package.json
+++ b/package.json
@@ -27,20 +27,32 @@
       "types": "./dist/udpPort.d.ts",
       "node": "./dist/udpPort.js"
     },
-    "./ws": {
+    "./websocket": {
       "types": "./dist/websocketPort.d.ts",
       "node": "./dist/websocketPort.js"
+    },
+    "./ws": {
+      "types": "./dist/wsPort.d.ts",
+      "node": "./dist/wsPort.js"
     }
   },
   "files": [
     "dist"
   ],
+  "peerDependencies": {
+    "ws": "^8.12.0"
+  },
+  "peerDependenciesMeta": {
+    "ws": { "optional": true }
+  },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@types/jest": "^29.2.5",
     "@types/node": "^16.18.11",
+    "@types/ws": "^8.5.4",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "ws": "^8.12.0"
   }
 }
