--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "vcs",
     "url": "https://github.com/mxfriend/osc.git"
   },
-  "version": "2.3.0",
+  "version": "2.3.1",
   "author": {
     "name": "Dan Kadera",
     "email": "me@subsonic.cz",
@@ -43,7 +43,9 @@
     "ws": "^8.12.0"
   },
   "peerDependenciesMeta": {
-    "ws": { "optional": true }
+    "ws": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
