--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "vcs",
     "url": "https://github.com/mxfriend/osc.git"
   },
-  "version": "2.6.4",
+  "version": "3.0.0-alpha.0",
   "author": {
     "name": "Dan Kadera",
     "email": "me@subsonic.cz",
@@ -20,27 +20,36 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
+      "types": "./types/index.d.ts",
+      "import": "./esm/index.mjs",
+      "default": "./cjs/index.js"
     },
     "./udp": {
-      "types": "./dist/udpPort.d.ts",
-      "node": "./dist/udpPort.js"
+      "types": "./types/udpPort.d.ts",
+      "import": "./esm/udpPort.mjs",
+      "node": "./cjs/udpPort.js"
     },
     "./websocket": {
-      "types": "./dist/websocketPort.d.ts",
-      "default": "./dist/websocketPort.js"
+      "types": "./types/websocketPort.d.ts",
+      "import": "./esm/websocketPort.mjs",
+      "default": "./cjs/websocketPort.js"
     },
     "./ws": {
-      "types": "./dist/wsPort.d.ts",
-      "node": "./dist/wsPort.js"
+      "types": "./types/wsPort.d.ts",
+      "import": "./esm/wsPort.mjs",
+      "node": "./cjs/wsPort.js"
     }
   },
   "files": [
-    "dist"
+    "cjs",
+    "esm",
+    "types"
   ],
+  "dependencies": {
+    "@mxfriend/events": "^1.0.2"
+  },
   "peerDependencies": {
-    "ws": "^8.14.2"
+    "ws": "^8.18"
   },
   "peerDependenciesMeta": {
     "ws": {
@@ -48,13 +57,17 @@
     }
   },
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.2",
-    "@types/jest": "^29.5.5",
-    "@types/node": "^18.18.4",
-    "@types/ws": "^8.5.6",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2",
-    "ws": "^8.14.2"
+    "@eslint/js": "^9.7.0",
+    "@tsconfig/node18": "^18.2.4",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^18.19.41",
+    "@types/ws": "^8.5.11",
+    "eslint": "^8.57.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.17.0",
+    "ws": "^8.18.0"
   }
 }
