--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "@tsconfig/node18",
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2023",
     "moduleResolution": "NodeNext",
-    "types": ["node", "jest"],
-    "lib": ["DOM"],
+    "types": ["node"],
+    "lib": ["ES2023", "DOM"],
     "declaration": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -12,9 +12,8 @@
     "noUnusedLocals": true,
     "noEmitOnError": true,
     "strictNullChecks": true,
-    "outDir": "dist"
+    "declarationDir": "types",
+    "outDir": "cjs"
   },
-  "include": [
-    "src/**/*.ts"
-  ]
+  "include": ["src/**/*.ts"]
 }
